[gd_scene load_steps=2 format=3 uid="uid://ddfk6bpdcwqat"]

[ext_resource type="Script" path="res://menu/pause_menu/pause_menu.gd" id="1_vc6b6"]

[node name="pause_menu" type="Panel"]
script = ExtResource("1_vc6b6")

[node name="vbnvbn" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1616.0
offset_top = -976.0
offset_right = 1616.0
offset_bottom = 976.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -80.0
offset_right = 176.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -50.0
offset_right = 144.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="to_main_menu_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit to Main Menu"

[node name="quit_game_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="resume_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[connection signal="pressed" from="Panel/VBoxContainer/to_main_menu_button" to="." method="_on_to_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/quit_game_button" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
